fix role bugs,update edition, add laravel jsvalidation to project

--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -130,7 +130,7 @@
                             </select>
                         </td>
                         <td>
-                            <a class="edit" ng-click="edituser(user.id)"  href="javascript:;">
+                            <a class="edit" ng-click="edituser(user)"  href="javascript:;">
                                 Edit </a>
                         </td>
                         <td>
