--- a/public/views/sys-users/sys-users.css
+++ b/public/views/sys-users/sys-users.css
@@ -17,3 +17,24 @@
 th{
     text-align:center;
 }
+
+.ngdialog.ngdialog-theme-default {
+    padding-bottom: 100px;
+    padding-top: 60px;
+}
+
+.ngdialog.ngdialog-theme-default .ngdialog-content {
+    -webkit-animation: ngdialog-flyin .5s;
+    animation: ngdialog-flyin .5s;
+    background: #f0f0f0;
+    border-radius: 5px;
+    color: #444;
+    font-family: 'Helvetica',sans-serif;
+    font-size: 1.1em;
+    line-height: 1.5em;
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 1em;
+    position: relative;
+    width: 800px;
+}
