--- a/public/views/sys-users/sys-users.css
+++ b/public/views/sys-users/sys-users.css
@@ -18,23 +18,43 @@ th{
     text-align:center;
 }
 
-.ngdialog.ngdialog-theme-default {
-    padding-bottom: 100px;
-    padding-top: 60px;
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none;
 }
 
-.ngdialog.ngdialog-theme-default .ngdialog-content {
-    -webkit-animation: ngdialog-flyin .5s;
-    animation: ngdialog-flyin .5s;
-    background: #f0f0f0;
-    border-radius: 5px;
-    color: #444;
-    font-family: 'Helvetica',sans-serif;
-    font-size: 1.1em;
-    line-height: 1.5em;
-    margin: 0 auto;
-    max-width: 100%;
-    padding: 1em;
-    position: relative;
-    width: 800px;
+/* AngularJS Form validation styling */
+.validation.help-block {
+    color: #E07676;
+    font-style: italic;
+}
+
+/* invalid & (dirty or touched) => red -- CSS3 only */
+.ng-invalid.ng-dirty:not(:focus),
+.ng-invalid.ng-touched:not(:focus) {
+    border-color: #e74c3c;
+}
+
+/* valid & dirty => green */
+.ng-valid.ng-dirty.ng-touched {
+    border-color: #2ecc71;
+}
+
+/* error display font italic, text-danger is red in BS */
+.validation.text-danger {
+    font-style: italic;
+}
+
+.glyphicon.spinning {
+    animation: spin 1s infinite linear;
+    -webkit-animation: spin2 1s infinite linear;
+}
+
+@keyframes spin {
+    from { transform: scale(1) rotate(0deg);}
+    to { transform: scale(1) rotate(360deg);}
+}
+
+@-webkit-keyframes spin2 {
+    from { -webkit-transform: rotate(0deg);}
+    to { -webkit-transform: rotate(360deg);}
 }
