push add for homer

--- a/public/views/sys-users/sys-users.html
+++ b/public/views/sys-users/sys-users.html
@@ -48,7 +48,7 @@
                     </a>
                 </div>
             </div>
-            <div class="portlet-body">
+            <div class="portlet-body" style="overflow: auto;">
                 <table>
                     <tr>
                         <td class="col-md-1">用户名 : &nbsp;</td>
