--- a/public/views/sys-users/sys-usersedit.html
+++ b/public/views/sys-users/sys-usersedit.html
@@ -82,7 +82,7 @@
                                 <label class="col-md-2 control-label">Checkboxes属性</label>
                                 <div class="col-md-10" style="margin-top: 10px;">
                                     <div class="md-checkbox">
-                                        <input type="checkbox" id="checkbox6" class="md-check">
+                                        <input type="checkbox" id="checkbox6" checked class="md-check">
                                         <label for="checkbox6">
                                             <span></span>
                                             <span class="check"></span>
