push add for   clender change pad

--- a/public/views/sys-news/sys-news.html
+++ b/public/views/sys-news/sys-news.html
@@ -11,7 +11,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#sys-users.html">用户管理</a>
+            <a href="#sys-nes.html">新闻管理</a>
         </li>
     </ul>
     <div class="page-toolbar">
@@ -162,6 +162,6 @@
 <!-- END MAIN CONTENT -->
 <!-- BEGIN MAIN JS & CSS -->
 <script language="JavaScript" type="text/javascript">
-//    TableEditable.init();
+    //    TableEditable.init();
 </script>
 <!-- BEGIN MAIN JS & CSS -->
