--- a/public/views/sys-model/sys-model.html
+++ b/public/views/sys-model/sys-model.html
@@ -26,7 +26,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class="icon-calendar"></i> 新日历项 <span class="badge badge-success">4</span>
+                        <i class="icon-calendar"></i> 新便签 <span class="badge badge-success">4</span>
                     </a>
                 </li>
             </ul>
