--- a/public/views/sys-addmodel/sys-addmodel.html
+++ b/public/views/sys-addmodel/sys-addmodel.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class="icon-calendar"></i> 新日历项 <span class="badge badge-success">4</span>
+                        <i class="icon-calendar"></i> 新便签 <span class="badge badge-success">4</span>
                     </a>
                 </li>
             </ul>
