--- a/public/views/dc-standard-sd/dc-standard-sd.css
+++ b/public/views/dc-standard-sd/dc-standard-sd.css
@@ -40,3 +40,12 @@ th{
      width: 800px;
  }
 .jquery-notific8-container.top { top: 60px; }
+
+.dataTables_filter {
+    float: right;
+    text-align: right;
+
+input {
+    margin-left: 0.5em;
+}
+}
